incl. functionality to ungroup grouped features

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ importFrom(crayon,yellow)
 importFrom(deldir,deldir)
 importFrom(deldir,tile.list)
 importFrom(dplyr,add_row)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
@@ -204,6 +205,7 @@ importFrom(sp,SpatialPolygons)
 importFrom(sp,SpatialPolygonsDataFrame)
 importFrom(sp,spTransform)
 importFrom(stats,dist)
+importFrom(stats,na.exclude)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,setNames)
