--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: geometr
 Title: Generate and Modify Interoperable Geometric Shapes
 Version: 0.2.11
 Authors@R: c(
-    person("Steffen", "Ehrmann", role = c("aut", "cre"), email = "steffen.science@funroll-loops.de", comment = c(ORCID = "0000-0002-2958-0796")),
+    person("Steffen", "Ehrmann", role = c("aut", "cre"), email = "steffen.ehrmann@posteo.de", comment = c(ORCID = "0000-0002-2958-0796")),
     person("Dan", "Sunday", role = c("cph"), comment = "fast point-in-polygon algorithm.")
     )
 Description: Provides tools that generate and process fully accessible and tidy
@@ -38,9 +38,8 @@ Suggests:
     testthat,
     rmarkdown,
     bookdown,
-    covr,
     knitr
 LinkingTo: Rcpp
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 SystemRequirements: C++11
 VignetteBuilder: knitr
